# glfw_playground

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: build.sh  configure.sh  run.sh
src/: main.cpp
